--- a/app/src/main/res/values-am-rET/strings.xml
+++ b/app/src/main/res/values-am-rET/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
-    <!ENTITY appName "OppiaMobile">
-    <!ENTITY companyName "Digital Campus"> ]>
+    <!ENTITY appName "Academy App (Liberia)">
+    <!ENTITY companyName "Last Mile Health"> ]>
 <resources>
     <string name="fragment_welcome_title">እንኳን ደህና መጣህ ወደ &appName;</string>
 </resources>
